# vegate-backend

./: .env.example  .gitignore  Dockerfile  README.md  __main__.py  alembic.ini.template  config.py  config.yaml  db_models.py  dev-compose.yaml  docker-compose.infra.network.yaml  docker-compose.infra.ports.yaml  docker-compose.infra.volumes.yaml  docker-compose.infra.yaml  docker-compose.services.yaml  docker-compose.yaml  docs.Dockerfile  docs.nginx.conf  f.json  feed.yaml  g.json  infra-compose.yaml  instruments.yaml  log.txt  mkdocs.yml  prod-compose.yaml  prometheus.yaml  pyproject.toml  tempo.yaml  utils.py
.github/workflows/: build.yaml  deploy.yaml  test.yaml
alembic/: env.py
backend/src/: config.py  db_models.py  main.py
backend/src/server/: app.py  dependencies.py
core/: typing.py
docker/: Dockerfile  backtest.Dockerfile  dev-compose.yaml  prod-compose.yaml  strat_deploy.Dockerfile
docs/: index.md
docs/reference/: markets.md  oms.md  strategy.md
docs/stylesheets/: extra.css
grafana/dashboards/: backend-dashboard.json  node-metrics-dashboard.json
server/: app.py  dependencies.py  exc.py  models.py  typing.py
server/routes/auth/: controller.py  models.py  route.py
server/services/: jwt_service.py
src/: .env.template  backtest.py  config.py  db_models.py  deploy.py  enums.py  main.py  models.py  util.py
src/alembic/: env.py
src/alembic/versions/: 0019a7043609_created_index_in_ticks_idx_ticks_source_.py  080fd2bd66ce_added_version_id_to_backtests.py  0cb2104874ae_added_version_id_to_strategy_deployments.py  116e8e60741d_changed_strategy_deployment_orders_.py  (+69 more)
src/api/: app.py  backtest_queue.py  dependencies.py  typing.py
src/backtest/: __init__.py  backtest_engine.py  config.py  engine.py  model.py
src/cli/: README.md  __init__.py  main.py
src/core/: enums.py  event.py  events.py  models.py  strategy.py  types.py
src/engine/: ARCHITECTURE.md  __init__.py  enums.py  models.py  ohlcv.py
src/events/: base.py  deployment.py  deserialiser.py  order.py  snapshot.py  strategy.py
src/lib/: backtest_engine.py  strategy.py  strategy_manager.py
src/pipelines/: __init__.py  alpaca.py  ohlc_builder.py
src/resources/: example.py
src/runners/: __init__.py  api_runner.py  backtest_listener.py  backtest_runner.py  base.py  base_runner.py  deployment_runner.py  event_runner.py  listener_runner.py  loader_runner.py  market_feed_runner.py  ohlc_feed_runner.py  order_event_runner.py  runner_config.py  server_runner.py  utils.py
src/server/: app.py  dependencies.py  exc.py  typing.py
src/service/: event_handler.py
src/services/: __init__.py  email.py  encryption.py  event_handler.py  ohlc_builder.py  order_event_handler.py  price_service.py
src/strategy/: model.py  service.py  strategy.py
src/utils/: db.py
tests/: README.md  __init__.py  conftest.py  fixtures.py  test_alpaca_broker.py  test_auth_router.py  test_backtest_broker.py  test_backtest_engine.py  test_backtest_metrics.py  test_metrics.py  test_proxy_broker.py
tests/engine/: test_backtesting.py  test_brokers.py  test_context.py  test_integration.py
tests/integration/: README.md  __init__.py  conftest.py  test_alpaca_broker_integration.py
tests/lib/: test_backtest_engine_metrics.py
tests/module/: conftest.py  util.py
tests/runners/: test_backtest_runner.py
(+633 files in other folders)
