[project]
name = "vegate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.17.1",
    "alpaca-py>=0.43.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "discord-py>=2.6.4",
    "fastapi>=0.119.0",
    "kafka-python>=2.2.15",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "stripe>=14.0.1",
    "uvicorn>=0.37.0",
]
