[project]
name = "vegate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "alpaca-py>=0.43.2",
    "argon2-cffi>=25.1.0",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "click>=8.1.0",
    "cryptography>=46.0.3",
    "discord-py>=2.6.4",
    "docker>=7.1.0",
    "faker>=40.18.0",
    "fastapi>=0.119.0",
    "kafka-python>=2.2.15",
    "kubernetes>=36.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.11.1",
    "opentelemetry-exporter-prometheus>=0.63b1",
    "opentelemetry-instrumentation-aiohttp-client>=0.63b1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-kafka-python>=0.63b1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "prometheus-client>=0.25.0",
    "protobuf>=3.18.0,<4.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-ai-slim[mistral]>=1.27.0",
    "pydantic[email,email-validator]>=2.12.0",
    "pyinstrument>=5.1.2",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
